<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttackActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ac"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tvHitMod"
        app:layout_constraintEnd_toStartOf="@+id/ptAC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ptAC"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_row="0"
        android:layout_column="0"
        android:autofillHints="@string/_0"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_15"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/rgAdvantage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.666"
        tools:ignore="LabelFor" />

    <RadioGroup
        android:id="@+id/rgAdvantage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        app:layout_constraintBottom_toBottomOf="@+id/ptCrit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ptAC"
        app:layout_constraintTop_toTopOf="@+id/ptHitMod">

        <RadioButton
            android:id="@+id/rbAdvantage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advantage" />

        <RadioButton
            android:id="@+id/rbDisadvantage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disadvantage" />

        <RadioButton
            android:id="@+id/rbNoneAdvDis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvHitMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/hit_mod"
        app:layout_constraintBottom_toTopOf="@+id/tvCrit"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/ptHitMod"
        android:layout_width="42dp"
        android:layout_height="46dp"
        android:layout_row="2"
        android:layout_column="1"
        android:autofillHints="@string/_15"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_5"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvHitMod"
        app:layout_constraintStart_toStartOf="@+id/ptAC"
        app:layout_constraintTop_toTopOf="@+id/tvHitMod"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvCrit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/crit"
        app:layout_constraintBottom_toTopOf="@+id/tvMisfire"
        app:layout_constraintEnd_toEndOf="@+id/tvHitMod"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvHitMod"
        app:layout_constraintTop_toBottomOf="@+id/tvHitMod" />

    <EditText
        android:id="@+id/ptCrit"
        android:layout_width="44dp"
        android:layout_height="37dp"
        android:layout_row="3"
        android:layout_column="1"
        android:autofillHints="@string/_20"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_20"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCrit"
        app:layout_constraintStart_toStartOf="@+id/ptHitMod"
        app:layout_constraintTop_toTopOf="@+id/tvCrit"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvMisfire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/misfire"
        app:layout_constraintBottom_toTopOf="@+id/btnAddDmg"
        app:layout_constraintEnd_toEndOf="@+id/tvCrit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvCrit"
        app:layout_constraintTop_toBottomOf="@+id/tvCrit" />

    <EditText
        android:id="@+id/ptMisfire"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_row="4"
        android:layout_column="1"
        android:autofillHints="@string/_0"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_0"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMisfire"
        app:layout_constraintStart_toStartOf="@+id/ptCrit"
        app:layout_constraintTop_toTopOf="@+id/tvMisfire"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnCalculateAtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:onClick="btnSubmitAttClick"
        android:text="@string/calc_att"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnAddDmg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnAddDmg"
        app:layout_constraintTop_toBottomOf="@+id/btnAddDmg" />

    <TextView
        android:id="@+id/tvAvgAttDmg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:text="@string/average_attack_damage"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnCalculateAtt"
        app:layout_constraintEnd_toEndOf="@+id/rgAdvantage"
        app:layout_constraintStart_toStartOf="@+id/ptMisfire"
        app:layout_constraintTop_toTopOf="@+id/btnCalculateAtt" />

    <Button
        android:id="@+id/btnAddDmg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnAddDmgClick"
        android:text="@string/add_damage"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculateAtt"
        app:layout_constraintEnd_toEndOf="@+id/tvMisfire"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tvMisfire"
        app:layout_constraintTop_toBottomOf="@+id/tvMisfire" />
</androidx.constraintlayout.widget.ConstraintLayout>